feat: 배틀 아이템 랭킹 시스템 구현
- Rankable 인터페이스 추가 (공동 순위 지원)
- 상품 상세 배틀 조회 시 TOP 3 + 현재 상품 랭킹 표시